--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="Versions/Risen 0.1/Risen.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -39,11 +39,11 @@ application/modify_resources=true
 application/icon=""
 application/console_wrapper_icon=""
 application/icon_interpolation=4
-application/file_version=""
+application/file_version="0.1"
 application/product_version=""
-application/company_name=""
-application/product_name=""
-application/file_description=""
+application/company_name="MurphysKids"
+application/product_name="Risen"
+application/file_description="Raise the dead to defend your lair"
 application/copyright=""
 application/trademarks=""
 ssh_remote_deploy/enabled=false
