--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Versions/Risen 0.1.1/Risen.exe"
+export_path="Versions/Risen v0.2/Risen.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -74,7 +74,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Versions/Risen 0.1.1/index.html"
+export_path="Versions/Risen v0.2/HTML/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
