Fixed some bugs
fixed right click and left click, also added in error handling for reading text file to better support changing waves later on.

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ Versions/Risen v0.2/HTML/index.wasm
 Versions/Risen v0.2/HTML/index.worker.js
 Versions/Risen v0.2/Risen.exe
 Versions/Risen v0.2/Risen.pck
+Versions/Risen v0.2/HTML/index.apple-touch-icon.png.import
+Versions/Risen v0.2/HTML/index.icon.png.import
+Versions/Risen v0.2/HTML/index.png.import
+Versions/Risen v0.2/HTML/index.zip
+Versions/Risen v0.2/Risen v0.2.zip
