--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Godot 4+ specific ignores
 .godot/
-Versions/Risen 0.1.1/Risen.exe
+Versions
 Versions/Risen 0.1.1/Risen.pck
 Versions/Risen 0.1/Risen.exe
 Versions/Risen 0.1/Risen.pck
