--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -6,19 +6,20 @@ runnable=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.txt"
 exclude_filter=""
-export_path="Versions/Risen v0.5/Risen.exe"
+export_path="Versions/Risen v0.5/Risen3.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
+script_encryption_key=""
 
 [preset.0.options]
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
+debug/export_console_script=1
 binary_format/embed_pck=false
 texture_format/bptc=true
 texture_format/s3tc=true
@@ -26,6 +27,9 @@ texture_format/etc=false
 texture_format/etc2=false
 binary_format/architecture="x86_64"
 codesign/enable=false
+codesign/identity_type=0
+codesign/identity=""
+codesign/password=""
 codesign/timestamp=true
 codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
@@ -59,7 +63,6 @@ Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorActi
 ssh_remote_deploy/cleanup_script="Stop-ScheduledTask -TaskName godot_remote_debug -ErrorAction:SilentlyContinue
 Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue
 Remove-Item -Recurse -Force '{temp_dir}'"
-debug/export_console_script=1
 
 [preset.1]
 
@@ -69,13 +72,14 @@ runnable=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.txt"
 exclude_filter=""
 export_path="Versions/Risen v0.5/HTML/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
+script_encryption_key=""
 
 [preset.1.options]
 
